@@ -14,6 +14,7 @@
     * Attempt to stamp version info on teh libs generated. There are aps in use linked against other 
       driver managers that expect VERS_3.52
     * Fix potential buffer overrun when using SAFEFILE
+    * Fix mutex problem in the exit from __SQLGetInfo (thanks Richard)
 
 20th-April-2010
 2.3.0
